# gws-token-activity-analyzer

./: .dockerignore  .gitignore  README.md  config.py  environment.yml  process.py  pyproject.toml  requirements.txt  reset.py  utils.py
docs/: DISCUSSION-CONCISE.md  DISCUSSION.md  README_old.md
gws-pipeline/: README.md  pyproject.toml
gws-pipeline/dagster/: dagster.yaml
gws-pipeline/src/gws_pipeline/: definitions.py  jobs.py
gws-pipeline/src/gws_pipeline/core/: analyze.py  config.py  db_loader.py  fetcher.py  main.py  models.py  process.py  reset.py  state.py  utils.py
gws-pipeline/src/gws_pipeline/core/process/: with_beam.py  with_polars.py
gws-pipeline/src/gws_pipeline/core/schemas/: events.py  fetcher.py  parquet_schemas.py  state.py
gws-pipeline/src/gws_pipeline/defs/analytics/: assets.py  resources.py
gws-pipeline/src/gws_pipeline/defs/ingestion/: assets.py  partitions.py  resources.py
gws-pipeline/src/gws_pipeline/defs/processing/: assets.py
gws-pipeline/src/gws_pipeline/defs/transformation/beam/: assets.py
gws_audit_analyzer/: dbt_project.yml
gws_audit_analyzer/models/marts/: schema.yml
gws_audit_analyzer/models/marts/aggregates/: dq_app_event_gaps.sql  dq_duplicate_events_daily.sql  fact_admin_action_breakdown_daily.sql  fact_admin_actions_daily.sql  fact_app_activity_baseline.sql  fact_app_activity_daily.sql  fact_app_scope_drift_daily.sql  fact_app_scope_drift_scopes_daily.sql  fact_event_volume_hourly.sql  fact_geo_activity_daily.sql  fact_geo_new_regions.sql  fact_ip_activity_daily.sql  fact_scope_cooccurrence_daily.sql  fact_scope_risk_daily.sql  fact_scope_usage_daily.sql  fact_user_activity_baseline.sql  (+1 more)
gws_audit_analyzer/models/reporting/: agg_admin_action_alerts_48h.sql  agg_dq_dupes_30d.sql  agg_dq_gaps_30d.sql  agg_event_volume_spikes.sql  agg_geo_recent_48h.sql  agg_high_risk_scope_names_7d.sql  agg_high_risk_scopes_7d.sql  agg_scope_pairs_high_risk_7d.sql  agg_token_intensity_outliers_48h.sql  agg_token_top_apps_48h.sql  agg_token_top_methods_48h.sql  agg_token_top_users_48h.sql  schema.yml
gws_audit_analyzer/models/sources/: processed.yml
gws_audit_analyzer/models/staging/: schema.yml  stg_admin_events.sql  stg_drive_events.sql  stg_login_events.sql  stg_saml_events.sql  stg_token_event_scopes.sql  stg_token_events.sql
scripts/: estimate_overlap_minutes.py  hard_reset.py  main.py  reset.py  reset_processed_and_loader_state.py  soft_reset.py
test/: test_event_partition_timestamp.py
(+11 files in other folders)
