[project]
name = "gws-token-activity-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-beam>=2.69.0",
    "google-auth>=2.43.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
